Add GET /users/:id
